--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ subjects:
 - !lcsh 'Adultery -- Fiction'
 - !lcsh 'Married people -- Fiction'
 - !lcsh 'Staffordshire (England) -- Fiction'
+- GITenberg
 title: A Mummer's Wife
 url: http://www.gutenberg.org/ebooks/7508
